--- a/firstproject/index.html
+++ b/firstproject/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head lang="en">
     <meta charset="UTF-8">
     <title>First Project</title>
-</head>
-<body ng-app>
-    <h1>Hello there</h1>
-    {{ 843 / 42 }}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"/>
+    <!-- Style -->
+    <link rel="stylesheet" href="style/style.css"/>
 
+    <!-- Angular -->
     <script src="../bower_components/angular/angular.min.js"></script>
+</head>
+<body ng-controller="MainController">
+    <h1>{{forecasts.city.name}}, Pampanga</h1>
+
+    <ul>
+        <li ng-repeat="list in forecasts.list">
+            <div>
+                {{ (list.dt * 1000) | date:'MMMM dd, yyyy HH:mm:ss Z' }}
+            </div>
+
+            <div>
+                <img src="http://openweathermap.org/img/w/{{list.weather[0].icon}}.png" alt=""/>
+                <b>{{ list.weather[0].description }}</b><br/>
+                temperature {{list.temp.day}}°С, wind {{list.speed}}m/s. clouds {{list.clouds}}%, {{list.pressure}} hpa
+            </div>
+        </li>
+    </ul>
+
+
+    <!-- Application Script -->
+    <script src="js/app.js"></script>
 </body>
 </html>
