--- a/firstproject/index.html
+++ b/firstproject/index.html
@@ -11,22 +11,28 @@
     <script src="../bower_components/angular/angular.min.js"></script>
 </head>
 <body ng-controller="MainController">
-    <h1>{{forecasts.city.name}}, Pampanga</h1>
 
-    <ul>
-        <li ng-repeat="list in forecasts.list">
-            <div>
-                {{ (list.dt * 1000) | date:'MMMM dd, yyyy HH:mm:ss Z' }}
-            </div>
+    <div id="loading" ng-hide="forecasts">
+        Please wait while we get your location information and weather information...
+    </div>
 
-            <div>
-                <img src="http://openweathermap.org/img/w/{{list.weather[0].icon}}.png" alt=""/>
-                <b>{{ list.weather[0].description }}</b><br/>
-                temperature {{list.temp.day}}°С, wind {{list.speed}}m/s. clouds {{list.clouds}}%, {{list.pressure}} hpa
-            </div>
-        </li>
-    </ul>
+    <div id="withData" ng-show="forecasts">
+        <h1>{{forecasts.city.name}}</h1>
 
+        <ul>
+            <li ng-repeat="list in forecasts.list">
+                <div>
+                    {{ (list.dt * 1000) | date:'MMMM dd, yyyy HH:mm:ss Z' }}
+                </div>
+
+                <div>
+                    <img src="http://openweathermap.org/img/w/{{list.weather[0].icon}}.png" alt=""/>
+                    <b>{{ list.weather[0].description }}</b><br/>
+                    temperature {{list.temp.day}}°С, wind {{list.speed}}m/s. clouds {{list.clouds}}%, {{list.pressure}} hpa
+                </div>
+            </li>
+        </ul>
+    </div>
 
     <!-- Application Script -->
     <script src="js/app.js"></script>
