--- a/firstproject/index.html
+++ b/firstproject/index.html
@@ -35,6 +35,6 @@
     </div>
 
     <!-- Application Script -->
-    <script src="js/app.js"></script>
+    <script src="app.min.js"></script>
 </body>
 </html>
