--- a/firstproject/index.html
+++ b/firstproject/index.html
@@ -5,7 +5,7 @@
     <title>First Project</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"/>
     <!-- Style -->
-    <link rel="stylesheet" href="style/style.css"/>
+    <link rel="stylesheet" href="style/style.min.css"/>
 
     <!-- Angular -->
     <script src="../bower_components/angular/angular.min.js"></script>
