--- a/eo-widget/index.html
+++ b/eo-widget/index.html
@@ -19,6 +19,12 @@
 </head>
 <body>
 <h1>Welcome to my restaurant</h1>
+<script>(function(d,t,i){var s,e=d.getElementsByTagName(t)[0];if(d.getElementById(id)){return;}
+    s=d.createElement(t);s.id=i;s.src="//eo.dev.koodi.ph/script/v1/1.widget.js";e.parentNode.insertBefore(s,e);}(document,'script','eowdget'));</script>
+
+<div id="eowidget">
+    <a href="http://eo.dev.koodi.ph/book/1" target="_blank" id="mkbking">MAKE <br> BOOKING</a>
+</div>
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
