--- a/eo-widget/index.html
+++ b/eo-widget/index.html
@@ -36,7 +36,7 @@
 </script>
 
 <div id="eowidget">
-    <a href="http://eo.dev.koodi.ph/book/1" target="_blank" id="mkbking">MAKE <br> BOOKING</a>
+    <a style="  height: 45px; margin: 5px;border: none;border-radius: 5px;  text-shadow: #8a8a8a 1.5px 1.5px;  vertical-align: middle;" href="http://eo.dev.koodi.ph/book/1" target="_blank" id="mkbking">MAKE <br> BOOKING</a>
 </div>
 
 
