--- a/eo-widget/index.html
+++ b/eo-widget/index.html
@@ -35,11 +35,16 @@
 
 </script>
 
+<br/>
+<h4>Button Testing</h4>
 <div id="eowidget">
-    <a style="  height: 45px; margin: 5px;border: none;border-radius: 5px;  text-shadow: #8a8a8a 1.5px 1.5px;  vertical-align: middle;" href="http://eo.dev.koodi.ph/book/1" target="_blank" id="mkbking">MAKE <br> BOOKING</a>
+    <a href="http://eo.dev.koodi.ph/book/1" target="_blank" id="mkbking">MAKE <br> BOOKING</a>
 </div>
 
 
+<br/>
+<br/>
+<h4>Iframe testing</h4>
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
     Book Now!
