--- a/eo-widget/index.html
+++ b/eo-widget/index.html
@@ -59,6 +59,7 @@
                 <h4 class="modal-title" id="myModalLabel">Modal title</h4>
             </div>
             <div class="modal-body">
+                <iframe scrolling="no"frameborder="0"id="mkbkingiframe"src="http://eo.dev.koodi.ph/book/1"style="width: 550px; height: 540px; z-index: 9999999;"></iframe>
             </div>
         </div>
     </div>
