--- a/eo-widget/index.html
+++ b/eo-widget/index.html
@@ -65,6 +65,14 @@
     </div>
 </div>
 
+<script>
+    $('iframe').load(function() {
+        $(this).contents().find('form').submit(function() {
+            return false;
+        });
+    });
+</script>
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
