--- a/eo-widget/index.html
+++ b/eo-widget/index.html
@@ -56,7 +56,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                <h4 class="modal-title" id="myModalLabel">Booking Widget</h4>
             </div>
             <div class="modal-body">
                 <iframe scrolling="no"frameborder="0"id="mkbkingiframe"src="http://eo.dev.koodi.ph/book/1"style="width: 550px; height: 570px; z-index: 9999999; background: #fff !important"></iframe>
