--- a/eo-widget/index.html
+++ b/eo-widget/index.html
@@ -16,6 +16,12 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    
+    <style>
+        .modal-dialog {
+              width: 481px !important;
+        }
+    </style>
 </head>
 <body>
 <h1>Welcome to my restaurant</h1>
@@ -38,7 +44,7 @@
 <br/>
 <h4>Button Testing</h4>
 <div id="eowidget">
-    <a href="http://eo.dev.koodi.ph/book/1" target="_blank" id="mkbking">MAKE <br> BOOKING</a>
+    <a href="http://eo.dev.koodi.ph/book/1" target="_blank" id="mkbking" role="button" class="btn btn-default">MAKE <br> BOOKING</a>
 </div>
 
 
