--- a/eo-widget/index.html
+++ b/eo-widget/index.html
@@ -42,10 +42,10 @@
 </script>
 
 <br/>
-<h4>Button Testing</h4>
-<div id="eowidget">
-    <a href="http://eo.dev.koodi.ph/book/1" target="_blank" id="mkbking" role="button" class="btn btn-default">MAKE <br> BOOKING</a>
-</div>
+<!--<h4>Button Testing</h4>-->
+<!--<div id="eowidget">-->
+<!--    <a href="http://eo.dev.koodi.ph/book/1" target="_blank" id="mkbking" role="button" class="btn btn-default">MAKE <br> BOOKING</a>-->
+<!--</div>-->
 
 
 <br/>
