added overflow hidden

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Alleo Indong's Page</title>
 
     <style>
+      body {
+        overflow: hidden;
+      }
+      
       canvas {
         display: block;
         width: 100vw;
