fix: remove default body margin

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <style>
       body {
         overflow: hidden;
+        margin: 0;
       }
-      
+
       canvas {
         display: block;
         width: 100vw;
