chore: added google font bitter

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Alleo Indong's Page</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Bitter&display=swap" rel="stylesheet">
     <style>
       body {
         overflow: hidden;
         margin: 0;
+        font-family: 'Bitter', serif;
       }
 
       canvas {
