added github icon

--- a/index.html
+++ b/index.html
@@ -39,10 +39,19 @@
   </head>
   <body>
     <div id="content">
-      <div>
+      <div id="profile">
         <h1>Alleo Indong</h1>
         <h3 class="title">Software Engineer</h3>
       </div>
+
+      <div id="socialMedia">
+            <ul>
+              <li>
+                  <a href="https://github.com/aindong"><img src="./images/github-sign.png" alt="github icon" /></a>
+              </li>
+              <li></li>
+            </ul>
+        </div>  
     </div>
 
     <canvas id="c"></canvas>
