sample profile list

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Alleo Indong's Page</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Bitter&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Bitter&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
         overflow: hidden;
         margin: 0;
-        font-family: 'Bitter', serif;
+        font-family: "Bitter", serif;
       }
 
       canvas {
@@ -45,13 +48,24 @@
       </div>
 
       <div id="socialMedia">
-            <ul>
-              <li>
-                  <a href="https://github.com/aindong"><img src="./images/github-sign.png" alt="github icon" /></a>
-              </li>
-              <li></li>
-            </ul>
-        </div>  
+        <ul>
+          <li>
+            <a href="https://github.com/aindong"
+              ><img src="./images/github-sign.png" alt="github icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://github.com/aindong"
+              ><img src="./images/github-sign.png" alt="github icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://github.com/aindong"
+              ><img src="./images/github-sign.png" alt="github icon"
+            /></a>
+          </li>
+        </ul>
+      </div>
     </div>
 
     <canvas id="c"></canvas>
