--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
       #content div h3.title {
         margin-top: -35px;
       }
+
+      #content ul {
+        padding: 0;
+        margin: 0;
+      }
+
+      #content ul li {
+        display: inline;
+        padding: 5px;
+      }
+
+      #socialMedia img {
+        width: 50px;
+      }
     </style>
   </head>
   <body>
@@ -51,17 +65,22 @@
         <ul>
           <li>
             <a href="https://github.com/aindong"
-              ><img src="./images/github-sign.png" alt="github icon"
+              ><img src="./images/github.png" alt="github icon"
             /></a>
           </li>
           <li>
-            <a href="https://github.com/aindong"
-              ><img src="./images/github-sign.png" alt="github icon"
+            <a href="https://twitter.com/AlleoIndong"
+              ><img src="./images/twitter.png" alt="twitter icon"
             /></a>
           </li>
           <li>
-            <a href="https://github.com/aindong"
-              ><img src="./images/github-sign.png" alt="github icon"
+            <a href="https://www.linkedin.com/in/alleo-indong-a17b2199"
+              ><img src="./images/linkedin.png" alt="linkedin icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/aindong550/"
+              ><img src="./images/instagram.png" alt="instagram icon"
             /></a>
           </li>
         </ul>
